force-app/main/default/objects/Chat_Message__e/Chat_Message__e.object-meta.xml
<CustomObject>
    <label>Chat Message</label>
    <pluralLabel>Chat Messages</pluralLabel>
</CustomObject>