force-app/main/default/objects/Chat_Message__e/fields/Chat_Data__c.field-meta.xml
<CustomField>
    <fullName>Chat_Data__c</fullName>
    <label>Chat Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>