force-app/main/default/objects/Chat_Message__e/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>